Update server control script